# valor

./: .gitignore  README.md  check_data.py  debug_nan.py  deepspeed_config.json  main.py  pyproject.toml  test.py
docs/: browsecomp_plus_valor.md  browsecomp_prompt_training.md  sglang_valor_training.md
prompts/: __init__.py  prompts.py
scripts/: README_rl_split.md  collect_trajectories.py  collect_trajectories_rl.py  collect_valor_browsecomp.py  compute_advantages.py  compute_browsecomp_advantages.py  compute_rewards.py  convert_qwen_for_vllm.py  evaluate_baseline.py  generate_sft.py  infer_valor_agent.py  prepare_webshaper_states.py  run_browsecomp_kimi.py  run_browsecomp_plus.py  run_iterresearch.py  test_llm.py  test_local_model.py  test_sglang.py  train_browsecomp_plus_rl.py  train_browsecomp_policy.py  train_browsecomp_value.py  train_policy.py  train_value.py  train_value_policy.py  train_webshaper_rl.py
tools/: __init__.py  pdf_parser.py  python_interpreter.py  scholar.py  search.py  visit.py
valor/: __init__.py  browsecomp_data.py  browsecomp_prompting.py  data.py  generation.py  io_utils.py  model.py  prompts.py  rl_utils.py  rollout_data.py  system_prompts.py  trajectory.py  utils.py
