[project]
name = "valor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "huggingface-hub>=1.7.1",
    "requests>=2.32.5",
    "safetensors>=0.7.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "typing>=3.10.0.0",
    "uuid>=1.30",
]
