[project]
name = "valor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=3.0.0",
    "deepspeed>=0.18.8",
    "faiss-cpu>=1.8.0",
    "flash-linear-attention>=0.4.2",
    "huggingface-hub[cli]>=1.7.1",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "bitsandbytes>=0.48.1",
    "pyarrow>=23.0.1",
    "pybase64>=1.4.3",
    "pyserini>=1.1.0",
    "qwen-omni-utils>=0.0.9",
    "ray>=2.54.0",
    "requests>=2.32.5",
    "safetensors>=0.7.0",
    "sglang>=0.5.2",
    "tevatron>=0.1.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "typing>=3.10.0.0",
    "uuid>=1.30",
    "zmq>=0.0.0",
]

[tool.uv.sources]
tevatron = { git = "https://github.com/texttron/tevatron.git", rev = "main" }
